--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^3.11.0",
-    "react-scripts": "3.4.4"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
